[package]
name = "BlockHorizon-blockchain"
version = "0.1.0"
authors = ["kryptonkn <artemovandrej941@gmail.com>"]
edition = "2024"

[lib]
name = "BlockHorizonLib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
secp256k1 = "0.27"
sha2 = "0.10"
ed25519-dalek = "2.2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }