[package]
name = "BlockHorizon-blockchain"
version = "0.1.0"
authors = ["kryptonkn <artemovandrej941@gmail.com>"]
edition = "2024"

[lib]
name = "BlockHorizonLib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
actix-web = "4"
tokio = { version = "1", features = ["full"] }